# stm32-lifi-poc

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  lifi-platform Debug.launch  lifi-platform.ioc
.github/workflows/: ci.yml
Core/Inc/: main.h  receiver.h  transmitter.h  utils.h
Core/Src/: main.c  receiver.c  transmitter.c  utils.c
Sources/: lifi_const.h  lifi_host_interface.c  lifi_host_interface.h  lifi_modem.c  lifi_modem.h  lifi_protocol.c  lifi_protocol.h  lifi_receiver.c  lifi_receiver.h  lifi_transmitter.c  lifi_transmitter.h  main.c
Sources/lifi_protocol/: lifi_protocol.c  lifi_protocol_internal.h  lifi_protocol_router.c  lifi_protocol_rx.c  lifi_protocol_tx.c  lifi_protocol_utils.c
Tests/fake/: fake_lifi_callbacks.c  fake_lifi_callbacks.h  fake_lifi_receiver.c  fake_lifi_receiver.h  fake_lifi_transmitter.c  fake_lifi_transmitter.h  fake_lifi_transport.c  fake_lifi_transport.h  stm32f4xx_hal.h
Tests/fixtures/: lifi_modem_fixture.c  lifi_modem_fixture.h  lifi_socket_fixture.c  lifi_socket_fixture.h
Tests/integration/: test_lifi_modem.c  test_lifi_protocol.c  test_runner.c  test_suites.h
